# spiral-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: arith.rs  client.rs  discrete_gaussian.rs  gadget.rs  lib.rs  ntt.rs  params.rs  poly.rs  server.rs
src/ntt/: alt.rs  avx2.rs  avx512.rs  base.rs  mod.rs  tables.rs  test.rs
