[package]
name = "spiral-rs"
version = "0.4.0"
edition = "2021"
authors = ["Samir Menon <menon.samir@gmail.com>"]
homepage = "https://github.com/menonsamir/spiral-rs"
repository = "https://github.com/menonsamir/spiral-rs"
description = "Rust implementation of the Spiral PIR scheme"
keywords = ["privacy", "fhe", "cryptography"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"

[features]
default = ["skip-avx512"]
skip-avx512 = []
server = ["rayon"]

[dependencies]
rayon = { version = "1.6.1", optional = true }
getrandom = { features = ["js"], version = "0.2.8" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rand_chacha = "0.3.1"
sha2 = "0.10"
subtle = "2.4"
fastrand = "2.0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
